@@ -1,3 +1,3 @@
-EBUILD clementine-9999.ebuild 3308 RMD160 0bcb32031de38900f60f3abcdae40a982361c24f SHA1 2957cf226017de9a234adf1fe68bc30057511876 SHA256 1f39d2c30d50daf867fec770565f9afa435392dcb050d49689973e0dc5a27ec6
-MISC ChangeLog 3883 RMD160 d7de999df78d80f1bf5e6cec996d99260ead45d7 SHA1 3a62a876a30a77ccbcd84d9d44708792befed08e SHA256 a05998c5cd7ff247240e4e7412c111c9afefc2f06db110876f0fc9538507a8ba
-MISC metadata.xml 843 RMD160 3c5426205342df7f216fd6693733ee2b2516fe4e SHA1 c9b377575fb59b532fa25eab98f11e825d06e270 SHA256 22c95d23b727a857b4ced6602fadc49074bb7009f9e5d8a1b8507a01c21e35d3
+EBUILD clementine-9999.ebuild 3439 RMD160 9aee47da8efc105807dbde79eea46b039b3c64cc SHA1 81fce875bcdf203b364b4cd3cb207587d3c23c31 SHA256 63d01d529ed3e8e9634021ffcbcc1bde1ef3a4023fa48975ee7f6e62c63a40d3
+MISC ChangeLog 4007 RMD160 c22e0481bcd85da7a937fab8bfeeadbdb3b5965e SHA1 01a5b7bbc2ee5ef5995f76a5e819a933bd0ba334 SHA256 e6047968f4283e48d25d65034a042a10ce26132a38aee5d87fbd693d88e720b3
+MISC metadata.xml 966 RMD160 64bcf63e40733b8607b3dbac91b31a5f4200c620 SHA1 56b7ef47faf3eb8e76992c89bd89ded98f2ea413 SHA256 f8e4ee6d5a6fcbdc174c15ae9511fffd616bded3d10537fa80fd5bbe7539fea5
