@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Jul 2011; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild,
+  metadata.xml:
+  add mms and ofa USE, TODO was removed
+
   15 May 2011; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild:
   sync with portage
 
